@startuml

AppCompatActivity <|-- RxLifecycleActivity
LifecycleProvider <|.. RxLifecycleActivity
RxLifecycleActivity <|-- BaseActivity

BaseActivity <|-- BasePActivity

abstract class RxLifecycleActivity {
    -val lifecycleSubject : BehaviorSubject<ActivityEvent> = BehaviorSubject.create()
}

abstract class BasePActivity<T : BaseContract.BasePresenter<*>>{
    protected lateinit var mPresenter : T
}
abstract class BaseActivity{
    #abstract initUI()
    #abstract attachPresenter()
    #abstract initData()
}
interface LifecycleProvider<E>
@enduml